--- a/src/Components/Playlist/Playlist.css
+++ b/src/Components/Playlist/Playlist.css
@@ -23,6 +23,8 @@
 
 .Playlist-save {
   cursor: pointer;
+  color: white;
+  font-weight: bold;
   width: 10rem;
   padding: .77rem 0;
   border-radius: 54px;
